<resources>
    <string name="global_confirm">Confirm</string>
    <string name="global_confirm_question">Are you sure?</string>
    <string name="global_warning">Warning</string>
    <string name="global_yes">Yes</string>
    <string name="global_no">No</string>
    <string name="action_settings">Settings</string>
    <string name="DateLabel">Date</string>
    <string name="FunctionLabel">Display</string>
    <string name="HistoryLabel">History</string>
    <string name="GraphLabel">Graphs</string>
    <string name="AddLabel">Add</string>
    <string name="DeleteLabel">Delete</string>
    <string name="ShareLabel">Share</string>
    <string name="EditLabel">Edit</string>
    <string name="DeleteRecordDialog">Remove this record?</string>
    <string name="FonteLabel">Bodybuilding</string>
    <string name="SerieLabel">Sets</string>
    <string name="RepetitionLabel_short">Reps</string>
    <string name="MachineLabel">Exercise</string>
    <string name="PoidsLabel">Weight</string>
    <string name="KgUnitLabel" translatable="false">kg</string>
    <string name="LbsUnitLabel" translatable="false">lb</string>
    <string name="StonesUnitLabel" translatable="false">st</string>
    <string name="NotesLabel">Notes</string>
    <string name="TopTenLabel">Last records:</string>
    <string name="ShareText">Share</string>
    <string name="ShareTitle">Share your perf</string>
    <string name="ShareInstruction">Edit your text before sending:</string>
    <string name="ShareTextDefault">I have lifted __WEIGHT__ kg on __MACHINE__ !</string>
    <string name="ShareParamWeight" translatable="false">__WEIGHT__</string>
    <string name="ShareParamMachine" translatable="false">__MACHINE__</string>
    <string name="CardioLabel">Cardio</string>
    <string name="DistanceLabel">Distance</string>
    <string name="DurationLabel">Duration</string>
    <string name="KmUnitLabel" translatable="false">km</string>
    <string name="MilesUnitLabel" translatable="false">miles</string>
    <string name="weightMenuLabel">Weight Track</string>
    <string name="weightLabel">Weight</string>
    <string name="fatLabel">Fat</string>
    <string name="bonesLabel">Bones</string>
    <string name="waterLabel">Water</string>
    <string name="musclesLabel">Muscles</string>
    <string name="measureLabel">Measure</string>
    <string name="sizeTableLabel">Measurement history:</string>
    <string name="createProfilTitle">Create new profile</string>
    <string name="profileSelected">Profile selected</string>
    <string name="createProfilQuestion">Choose your profile name?</string>
    <string name="userChanged">User changed</string>
    <string name="renameProfilTitle">Rename profile</string>
    <string name="renameProfilQuestion">Rename this profile?</string>
    <string name="SettingLabel">Settings</string>
    <string name="export_database">Export Records</string>
    <string name="export_question">Export the database of </string>
    <string name="export_success">Database exported</string>
    <string name="export_failed">Could not export database</string>
    <string name="import_database">Import Records</string>
    <string name="removedid">ID removed</string>
    <string name="failedtocreatefolder">Could not create folder</string>
    <string name="deleteDB_warning">Reset the entire app and exit?\n(All data will be lost.)</string>
    <string name="ResetAppLabel">Reset app</string>
    <string name="MachinesLabel">Exercises</string>
    <string name="pref_ui_setting">UI Settings</string>
    <string name="pref_show_mp3_player">Show Audio Player</string>
    <string name="pref_show_mp3_player_summary">Show/hide the audio player toolbar</string>
    <string name="pref_audio_setting">Rest Timer Settings</string>
    <string name="pref_play_sound_after_rest_timer">Beep</string>
    <string name="pref_play_sound_after_rest_timer_summary">Beep at the end of rest timer</string>
    <string name="pref_play_vibration_after_rest_timer">Vibration</string>
    <string name="pref_play_vibration_after_rest_timer_summary">Vibrate at the end of rest timer</string>
    <string name="pref_scheduled_backup_setting">Automatic Backup Settings</string>
    <string-array name="backup_options">
        <item>Manually</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string-array name="backup_settings_Enum" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="pref_lastBackupSettingSummary">Last Backup:</string>
    <string name="pref_preferredBackupSettingTitle">Frequency</string>
    <string name="backup_notStarted">No backup started</string>
    <string name="backup_warning_never">"Perform your first backup now. "</string>
    <string name="backup_warning_day">"One day since your last backup. "</string>
    <string name="backup_warning_week">"One week since your last backup. "</string>
    <string name="backup_warning_month">"One month since your last backup. "</string>
    <string name="pref_preferredUnitSummary">"Preferred unit: "</string>
    <string name="pref_preferredUnitTitle">Weight</string>
    <string name="pref_preferredDistanceUnitTitle">Distance</string>
    <string name="pref_preferredSizeUnitTitle">Body measurement</string>
    <string name="profil_create_new">Create new profile</string>
    <string name="profil_change">Change profile</string>
    <string name="profil_select_profil">Select a profile</string>
    <string name="profil_delete">Delete a profile</string>
    <string name="profil_select_profil_to_delete">Select a profile to delete</string>
    <string name="AboutLabel">About</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string-array name="weight_units" translatable="false">
        <item>@string/KgUnitLabel</item>
        <item>@string/LbsUnitLabel</item>
        <item>@string/StonesUnitLabel</item>
    </string-array>
    <string-array name="fonte_unitsEnum" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="distance_units" translatable="false">
        <item>@string/KmUnitLabel</item>
        <item>@string/MilesUnitLabel</item>
    </string-array>
    <string-array name="distance_unitsEnum" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="CmUnitLabel" translatable="false">cm</string>
    <string name="InUnitLabel" translatable="false">in</string>
    <string-array name="size_units" translatable="false">
        <item>@string/CmUnitLabel</item>
        <item>@string/InUnitLabel</item>
    </string-array>
    <string-array name="size_unitsEnum" translatable="false">
        <item>5</item>
        <item>6</item>
    </string-array>
    <string name="maxRep1">Max Weight (Reps &gt;= 1)</string>
    <string name="maxRep5d">Max Weight (Reps &gt;= 5)</string>
    <string name="sum">Weight Sum</string>
    <string name="sumReps">Reps Sum</string>
    <string name="maxReps">Max Reps</string>
    <string name="oneRepMax">1 Rep Max estimate (Reps &lt;= 10)</string>
    <string-array name="graph_functions" translatable="false">
        <item>@string/maxRep1</item>
        <item>@string/maxRep5d</item>
        <item>@string/sum</item>
        <item>@string/sumReps</item>
        <item>@string/maxReps</item>
        <item>@string/oneRepMax</item>
    </string-array>
    <string name="sumDistance">Distance</string>
    <string name="sumDuration">Duration</string>
    <string name="speed">Speed</string>
    <string-array name="graph_cardio_functions" translatable="false">
        <item>@string/sumDistance</item>
        <item>@string/sumDuration</item>
        <item>@string/speed</item>
    </string-array>
    <string name="maxWeightPerDuration">"Max Weight per Duration"</string>
    <string name="maxLengthPerDate">Max duration per Date</string>
    <string name="nbSeriesPerDate">Nb Sets per Date</string>
    <string-array name="graph_static_functions" translate="false">
        <item>@string/maxWeightPerDuration</item>
        <item>@string/maxLengthPerDate</item>
        <item>@string/nbSeriesPerDate</item>
    </string-array>
    <string name="all">All</string>
    <string name="bodytracking">Body Track</string>
    <string name="selectMuscles">Select Muscles</string>
    <string name="biceps">Biceps</string>
    <string name="triceps">Triceps</string>
    <string name="pectoraux">Chest</string>
    <string name="deltoids">Deltoids</string>
    <string name="dorseaux">Back</string>
    <string name="abdominaux">Abdominals</string>
    <string name="quadriceps">Quadriceps</string>
    <string name="ischio_jambiers">Hamstrings</string>
    <string name="adducteurs">Thighs</string>
    <string name="mollets">Calves</string>
    <string name="trapezius">Trapezius</string>
    <string name="obliques">Obliques</string>
    <string name="left_arm">Left biceps</string>
    <string name="right_arm">Right biceps</string>
    <string name="neck">Neck</string>
    <string name="left_thigh">Left thigh</string>
    <string name="right_thigh">Right thigh</string>
    <string name="left_calves">Left calves</string>
    <string name="right_calves">Right calves</string>
    <string name="waist">Waist</string>
    <string name="behind">Hips</string>
    <string name="shoulders">Shoulders</string>
    <string name="glutes">Glutes</string>
    <string name="size">Size</string>
    <string name="backDialog_confirm_text">Save before exiting?</string>
    <string name="deleteMachine_confirm_text">Delete this exercise and all associated records?</string>
    <string name="renameMachine_warning_text">This exercise name exists. Records will be merged with the other exercise.</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="graph_all">All</string>
    <string name="graph_lastyear">Last Year</string>
    <string name="graph_lastmonth">Last Month</string>
    <string name="graph_lastweek">Last Week</string>
    <string-array name="zoom_list">
        <item>@string/graph_all</item>
        <item>@string/graph_lastyear</item>
        <item>@string/graph_lastmonth</item>
        <item>@string/graph_lastweek</item>
    </string-array>
    <string name="ChronometerLabel">Chronometer</string>
    <string name="CountdownLabel">Rest time</string>
    <string name="activate_rest_time">Activate rest countdown</string>
    <string name="rest_time">Rest time (sec.)</string>
    <string name="lastRecordLabel">Last record</string>
    <string name="FilterHint">Filter by exercise name</string>
    <string name="FilterTextViewType">Filter by exercise type</string>
    <string name="total_weight">Total weight</string>
    <string name="total_session">Total during session</string>
    <string name="total_machine">Total on exercise</string>
    <string name="nb_serie">Nb Sets</string>
    <string name="exit">Exit</string>
    <string name="selectMachineDialogLabel">Select an existing exercise</string>
    <string name="filterExerciseTypeDialogLabel">Filter for Exercise Types</string>
    <string name="fillNameField">Please enter your name, at least</string>
    <string name="introSlide1Title">Hello</string>
    <string name="size_cm_optional">Height (cm) (optional)</string>
    <string name="create">Create</string>
    <string name="birthday_optional">Birthday (optional)</string>
    <string name="edit_value">Edit value</string>
    <string name="exercise_type">Exercise Type:</string>
    <string name="staticExercise">Isometric</string>
    <string name="SecondsLabel_short">Sec.</string>
    <string name="timeLabel">Time</string>
    <string name="strength_category">Strength</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
</resources>