<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/tableheader_background"
    android:orientation="horizontal"
    android:paddingBottom="2dp"
    android:paddingTop="2dp">

    <TextView
        android:id="@+id/DATE_CELL"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="0dp"
        android:layout_weight="35"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingTop="0dp"
        android:text="@string/DateLabel" />


    <TextView
        android:id="@+id/MACHINE_CELL"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="40"
        android:gravity="center|start"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingBottom="0dp"
        android:paddingTop="0dp"
        android:text="@string/MachineLabel" />

    <TextView
        android:id="@+id/SERIE_CELL"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="20"
        android:gravity="start|center"
        android:ellipsize="end"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/SerieLabel" />

    <TextView
        android:id="@+id/REPETITION_CELL"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginLeft="5dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_marginRight="5dp"
        android:layout_weight="15"
        android:gravity="start|center"
        android:text="@string/RepetitionLabel_short" />

    <TextView
    android:id="@+id/POIDS_CELL"
    android:layout_width="0dip"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_weight="20"
    android:gravity="start|center"
    android:text="@string/weightLabel" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="start|center"
        android:text="" />

</LinearLayout>