<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab_graph"
    android:name="tab_graph"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp" >
    
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:stretchColumns="1" >

    <TableRow
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/textviewGraphFunction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FunctionLabel" />

        <Spinner
            android:id="@+id/filterGraphFunction"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/graph_functions" />
    </TableRow>

    <TableRow android:gravity="center_vertical" >

        <TextView
            android:id="@+id/textviewGraphMachine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MachineLabel" />
        
        <Spinner
            android:id="@+id/filterGraphMachine"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    </TableRow>
	</TableLayout>
	
    <LinearLayout     
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <Button
            android:id="@+id/allbutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginBottom="5dp"
            android:layout_weight="40"
            android:background="@android:color/white"
            android:text="@string/graph_all"
            android:textSize="@dimen/abc_text_size_small_material" />

       <Button
           android:id="@+id/lastyearbutton"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginLeft="5dip"
           android:layout_marginRight="5dip"
           android:layout_marginBottom="5dp"
           android:layout_weight="40"
           android:background="@android:color/white"
           android:text="@string/graph_lastyear"
           android:textSize="@dimen/abc_text_size_small_material" />

       <Button
           android:id="@+id/lastmonthbutton"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginLeft="5dip"
           android:layout_marginRight="5dip"
           android:layout_marginBottom="5dp"
           android:layout_weight="40"
           android:background="@android:color/white"
           android:text="@string/graph_lastmonth"
           android:textSize="@dimen/abc_text_size_small_material" />
       
       <Button
           android:id="@+id/lastweekbutton"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginLeft="5dip"
           android:layout_marginRight="5dip"
           android:layout_marginBottom="5dp"
           android:layout_weight="40"
           android:background="@android:color/white"
           android:text="@string/graph_lastweek"
           android:textSize="@dimen/abc_text_size_small_material" />
       
    </LinearLayout>
    
    
    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/graphChart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" />

</LinearLayout>